# Ore-Server-Dashboard

./: Cargo.toml  README.de.md  README.md
src/: main.rs
src/templates/: base.html  index.html
