[package]
name = "advanced_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tera = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
